[workspace]
[package]
version = "0.1.0"
name = "zk-nintendo-program"
edition = "2021"
default-run = "zk-nintendo-program"

[dependencies]
bincode = "1.3.3"
serde = "1.0.197"
tetanes = { git = "https://github.com/corddry/tetanes.git" }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
image = "0.24.9"
